--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div>
     <h3><%= @user.name %></h3>
-    <%= image_tag @user.get_@rofile_imafe(100,100) %>
+    <%= image_tag @user.get_profile_image(100,100) %>
+    <p><%= link_to "プロフィール編集",post_image_path(post_image.id)</p>
 </div>
 
 <% @post_images.each do |post_image| %>
