--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,5 +4,5 @@
  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
  <label for="inputImage">ProfielImages</label>
  <%= f.file_field :profile_image, pleceholder: "プロフィール画像", accept: "image/*" %>
- <%= f.submit "変更を保存" 
+ <%= f.submit "変更を保存" %>
 <% end %>
