--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <div>
     <h3><%= @user.name %></h3>
     <%= image_tag @user.get_profile_image(100,100) %>
-    <p><%= link_to "プロフィール編集",post_image_path(post_image.id)</p>
+    <% if @user == current_user.id %>
+     <p><%= link_to "プロフィール編集", edit_user_path(@user.id) %></p>
+    <% end %>
 </div>
 
 <% @post_images.each do |post_image| %>
